fuck it we ball, all images are now included

--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,100 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <%- include('../partials/head'); %>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/service.css">
-    <title>Document</title>
-</head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/service.css" />
+		<title>Document</title>
+	</head>
 
-<body>
-   <main>
-       <div class="hero" style="background-image: url('https://i.postimg.cc/85Mhz7hL/sparksfly.jpg');">
-           <div class="content">
-               <h2 style="color: #ff9000;">Services</h2>
-               <div class="Services">
-                    <p>At Rapid Rescuers, we provide a comprehensive range of services to ensure the safety and well-being of our community. Our team is equipped and ready to handle various emergencies with utmost efficiency and care.</p>
-                    
-                    <div class="service-card">
-                        <h2 style="color: #ff9000;">Firefighting</h2>
-                        <div class="firefighting-items">
-                            <div class="firefighting-item-card">
-                                <b>Emergency Response:</b> Our team is trained to respond swiftly to fire emergencies, minimizing damage and ensuring the safety of individuals and property.
-                            </div>
-                            <div class="firefighting-item-card">
-                                <b>Fire Prevention:</b> We conduct regular inspections and provide fire safety education to prevent potential hazards.
-                            </div>
-                            <div class="firefighting-item-card">
-                                <b>Fire Suppression:</b> Utilizing state-of-the-art equipment, we effectively extinguish fires and prevent re-ignition.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="service-card">
-                    <h2 style="color: #ff9000;">Assistance</h2>
-                    <div class="medical-items">
-                        <div class="medical-item-card">
-                            <b>Fire Safety Education:</b> Community programs for fire safety awareness and prevention.
-                        </div>
-                    </div>
-                </div>
-                <div class="service-card">
-                    <h2 style="color: #ff9000;">Rescue Operations</h2>
-                    <div class="rescue-items">
-                        <div class="rescue-item-card">
-                            <b>Disaster Response:</b> Assistance during natural disasters and accidents.
-                        </div>
-                        <div class="rescue-item-card">
-                            <b>Search & Rescue:</b> Locating and saving individuals in distress.
-                        </div>
-                        <div class="rescue-item-card">
-                            <b>Evacuation:</b> Evacuate civilian from the upcoming natural disasters.
-                        </div>
-                    </div>
-                </div>
-                </div>
-                <div class="service-card">
-                    <h2 style="color: #ff9000;">How to Apply</h2>
-                    <p>Becoming a Rapid Rescuers is a challenging but rewarding process. Here are the steps to join our team:</p>
-                    <div class="how-to-apply-cards">
-                        <div class="apply-card">
-                            <h3>1. Submit an Application</h3>
-                            <p>Fill out our online application form with your details and experience.</p>
-                        </div>
-                        <div class="apply-card">
-                            <h3>2. Complete an Interview</h3>
-                            <p>Participate in an interview to discuss your qualifications and passion for rescue work.</p>
-                        </div>
-                        <div class="apply-card">
-                            <h3>3. Pass the Training</h3>
-                            <p>Undergo our rigorous training program to ensure you're ready for any emergency.</p>
-                        </div>
-                        <div class="apply-card">
-                            <h3>4. Join the Team</h3>
-                            <p>Once you've completed the training, you'll be officially welcomed into the Rapid Rescuers family.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="info-cards-column">
-                <div class="info-card">
-                    <h2 style="color: #ff9000;">Hear from Our Rescuers</h2>
-                    <p>"Joining Rapid Rescuers was the best decision I've
-                        ever made. The training is intense, but the sense of
-                        accomplishment and the lives we save make it all
-                        worth it." – Alex M., Firefighter.</p>
-                </div>
-                <div class="info-card">
-                    <h2 style="color: #ff9000;">Ready to Make a Difference?</h2>
-                    <p>If you're ready to take on the challenge and become a
-                        part of something bigger, apply now and start your
-                        journey with Rapid Rescuers. Together, we can protect
-                        and serve our community, one rescue at a time.</p>
-                </div>
-                 <h2 style="color: #ff9000;">Apply Today and Join Our Team of Heroes!</h2>
-              </div>
-            </div>
-       </div>
-    </main>
-    <%- include('../partials/footer'); %>
-</body>
+	<body>
+		<%- include('../partials/head'); %>
+		<main>
+			<div
+				class="hero"
+				style="
+					background-image: url('https://i.postimg.cc/85Mhz7hL/sparksfly.jpg');
+				"
+			>
+				<div class="content">
+					<h2 style="color: #ff9000">Services</h2>
+					<div class="Services">
+						<p>
+							At Rapid Rescuers, we provide a comprehensive range of services to
+							ensure the safety and well-being of our community. Our team is
+							equipped and ready to handle various emergencies with utmost
+							efficiency and care.
+						</p>
+
+						<div class="service-card">
+							<h2 style="color: #ff9000">Firefighting</h2>
+							<div class="firefighting-items">
+								<div class="firefighting-item-card">
+									<b>Emergency Response:</b> Our team is trained to respond
+									swiftly to fire emergencies, minimizing damage and ensuring
+									the safety of individuals and property.
+								</div>
+								<div class="firefighting-item-card">
+									<b>Fire Prevention:</b> We conduct regular inspections and
+									provide fire safety education to prevent potential hazards.
+								</div>
+								<div class="firefighting-item-card">
+									<b>Fire Suppression:</b> Utilizing state-of-the-art equipment,
+									we effectively extinguish fires and prevent re-ignition.
+								</div>
+							</div>
+						</div>
+						<div class="service-card">
+							<h2 style="color: #ff9000">Assistance</h2>
+							<div class="medical-items">
+								<div class="medical-item-card">
+									<b>Fire Safety Education:</b> Community programs for fire
+									safety awareness and prevention.
+								</div>
+							</div>
+						</div>
+						<div class="service-card">
+							<h2 style="color: #ff9000">Rescue Operations</h2>
+							<div class="rescue-items">
+								<div class="rescue-item-card">
+									<b>Disaster Response:</b> Assistance during natural disasters
+									and accidents.
+								</div>
+								<div class="rescue-item-card">
+									<b>Search & Rescue:</b> Locating and saving individuals in
+									distress.
+								</div>
+								<div class="rescue-item-card">
+									<b>Evacuation:</b> Evacuate civilian from the upcoming natural
+									disasters.
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="service-card">
+						<h2 style="color: #ff9000">How to Apply</h2>
+						<p>
+							Becoming a Rapid Rescuers is a challenging but rewarding process.
+							Here are the steps to join our team:
+						</p>
+						<div class="how-to-apply-cards">
+							<div class="apply-card">
+								<h3>1. Submit an Application</h3>
+								<p>
+									Fill out our online application form with your details and
+									experience.
+								</p>
+							</div>
+							<div class="apply-card">
+								<h3>2. Complete an Interview</h3>
+								<p>
+									Participate in an interview to discuss your qualifications and
+									passion for rescue work.
+								</p>
+							</div>
+							<div class="apply-card">
+								<h3>3. Pass the Training</h3>
+								<p>
+									Undergo our rigorous training program to ensure you're ready
+									for any emergency.
+								</p>
+							</div>
+							<div class="apply-card">
+								<h3>4. Join the Team</h3>
+								<p>
+									Once you've completed the training, you'll be officially
+									welcomed into the Rapid Rescuers family.
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="info-cards-column">
+						<div class="info-card">
+							<h2 style="color: #ff9000">Hear from Our Rescuers</h2>
+							<p>
+								"Joining Rapid Rescuers was the best decision I've ever made.
+								The training is intense, but the sense of accomplishment and the
+								lives we save make it all worth it." – Alex M., Firefighter.
+							</p>
+						</div>
+						<div class="info-card">
+							<h2 style="color: #ff9000">Ready to Make a Difference?</h2>
+							<p>
+								If you're ready to take on the challenge and become a part of
+								something bigger, apply now and start your journey with Rapid
+								Rescuers. Together, we can protect and serve our community, one
+								rescue at a time.
+							</p>
+						</div>
+						<h2 style="color: #ff9000">
+							Apply Today and Join Our Team of Heroes!
+						</h2>
+					</div>
+				</div>
+			</div>
+		</main>
+		<%- include('../partials/footer'); %>
+	</body>
 </html>
