--- a/partials/head.ejs
+++ b/partials/head.ejs
@@ -2,8 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>FireForce</title>
 <link rel="stylesheet" href="/styles.css" />
-<<<<<<< HEAD
-<nav class="w-full bg-white rounded-2xl shadow-md p-4 mb-8 fixed top-0">
+<nav class="w-full bg-white rounded-2xl shadow-md p-4 mb-8">
 	<div class="container mx-auto flex justify-between items-center">
 		<!-- Logo or Name -->
 		<a href="#" class="text-2xl font-bold text-gray-900">
@@ -55,23 +54,5 @@
 				/>
 			</svg>
 		</button>
-=======
-<header>
-	<div class="header-container">
-		<a href="index"
-			><img
-				src="https://logos-world.net/wp-content/uploads/2022/02/Fire-Department-Logo-700x394.png"
-				alt="Rapid Force Logo"
-				class="logo"
-		/></a>
-		<nav>
-			<ul class="nav-links">
-				<li><a href="/">Home</a></li>
-				<li><a href="/about">About Us</a></li>
-				<li><a href="/contact">Contact Us</a></li>
-				<li><a href="/services">Services</a></li>
-			</ul>
-		</nav>
->>>>>>> 074509b5f1ab0058fe20261f3c1a606d7440c4a7
 	</div>
 </nav>
