--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
 		</style>
 	</head>
 	<body>
-		<%- include('../partials/head'); %>
+		<div class="fixed top-0 w-full"><%- include('../partials/head'); %></div>
 		<main class="flex items-center justify-center min-h-screen p-4 md:p-8">
 			<!-- About Me Card Container -->
 			<div
@@ -36,15 +36,11 @@
 				<div class="flex flex-col md:flex-row items-center gap-8 md:gap-12">
 					<!-- Profile Photo Section -->
 					<div class="flex-shrink-0 relative w-48 h-48 md:w-64 md:h-64">
-						<!-- Outer container to apply shadow and squircle shape -->
-						<div
-							class="absolute inset-0 bg-white rounded-3xl squircle-mask shadow-lg"
-						></div>
 						<!-- Inner container with the placeholder image -->
 						<img
-							src="https://placehold.co/256x256/2a60e0/ffffff?text=Profile+Photo"
+							src="<%= pfp %>"
 							alt="Placeholder profile photo"
-							class="object-cover w-full h-full rounded-3xl squircle-mask"
+							class="object-cover inset-0 w-full h-full rounded-3xl squircle-mask shadow-lg"
 						/>
 					</div>
 
@@ -60,7 +56,8 @@
 						<h2
 							class="text-xl md:text-2xl font-semibold text-blue-600 mb-4 md:mb-6"
 						>
-							Frontend Developer, Godot Developer & Flutter Developer
+							Frontend Developer, UI/UX Designer, Godot Developer & Flutter
+							Developer
 						</h2>
 						<!-- Bio/About Me text -->
 						<p class="text-gray-700 leading-relaxed mb-6 md:mb-8">
@@ -89,12 +86,17 @@
 								>JavaScript</span
 							>
 							<span
-								class="bg-gray-200 text-gray-800 text-sm font-medium px-4 py-2 rounded-full shadow-sm"
+								class="bg-blue-100 text-blue-800 text-sm font-medium px-4 py-2 rounded-full shadow-sm"
 								>NextJS</span
 							>
+
 							<span
 								class="bg-blue-100 text-blue-800 text-sm font-medium px-4 py-2 rounded-full shadow-sm"
 								>Godot</span
+							>
+							<span
+								class="bg-blue-100 text-blue-800 text-sm font-medium px-4 py-2 rounded-full shadow-sm"
+								>Figma</span
 							>
 							<span
 								class="bg-gray-200 text-gray-800 text-sm font-medium px-4 py-2 rounded-full shadow-sm"
@@ -109,9 +111,7 @@
 				</div>
 			</div>
 		</main>
-<<<<<<< HEAD
-=======
-		<%- include('../partials/footer'); %>
->>>>>>> 074509b5f1ab0058fe20261f3c1a606d7440c4a7
+		<<<<<<< HEAD ======= <%- include('../partials/footer'); %> >>>>>>>
+		074509b5f1ab0058fe20261f3c1a606d7440c4a7
 	</body>
 </html>
